<?xml version="1.0"?>
<package>
  <name>cvr_lse</name>
  <version>0.0.1</version>
  <description>cvr_lse</description>
  
  <maintainer email="gaohaiming@zhejianglab.com">Haiming Gao</maintainer>
  
  <license>TODO</license>

  <author>Haiming Gao</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_conversions</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>
  <build_depend>message_runtime</build_depend>
  <run_depend>message_runtime</run_depend>

</package>

